# raman

./: CMakeLists.txt  README.md  TLCCS.txt  ramanPY.py
comunication/: CMakeLists.txt  comunication_controller.cpp  comunication_controller.hpp  main.cpp
dependencies/: CMakeLists.txt  FTS.h  FTSData.h  FTSErrorCodes.h  FTSFunc.h  FTSMath.h  FTSReferenceFit.h  FTSSpectrumAnalysis.h  FTSVirtualSpectrometer.h  FTSpectrometer.h  FileIO.h  TLCCS.c  comunication_controller.hpp  visa.cpp
include/: FTS.h  FileIO.h
lib/: FTSLib.lib  TLCCS_64.lib
src/: CMakeLists.txt  cvidef.h  cvirte.h  main.c
